--- a/jellyfin/ingress.yaml
+++ b/jellyfin/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: jellyfin
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    #traefik.ingress.kubernetes.io/router.middlewares: traefik-homepage-auth@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-homepage-auth@kubernetescrd
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
