--- a/openwebui/ingress.yaml
+++ b/openwebui/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
   name: ollama
   namespace: open-webui
