add longhorn & minio and migrate navidrome pvcs to longhorn

--- a/namespaces.yaml
+++ b/namespaces.yaml
@@ -49,3 +49,13 @@ kind: Namespace
 metadata:
   name: cert-manager
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: longhorn
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: minio
+---
