--- a/navidrome/pvc.yaml
+++ b/navidrome/pvc.yaml
@@ -1,62 +1,28 @@
 ---
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: navidrome-pv-data
-  namespace: navidrome
-  labels:
-    type: local
-spec:
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: manual
-  capacity:
-    storage: 10Gi
-  accessModes:
-    - ReadWriteMany
-  hostPath:
-    path: "/storage/navidrome/data"
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: navidrome-pv-music
-  namespace: navidrome
-  labels:
-    type: local
-spec:
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: manual
-  capacity:
-    storage: 100Gi
-  accessModes:
-    - ReadWriteMany
-  hostPath:
-    path: "/storage/navidrome/music"
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: navidrome-pvc-data
+  name: navidrome-pvc-data-longhorn
+  annotations:
+    numberOfReplicas: '1'
 spec:
-  volumeMode: Filesystem
-  volumeName: navidrome-pv-data
-  storageClassName: manual
-  accessModes:
-    - ReadWriteMany
+  accessModes: ["ReadWriteMany"]
+  storageClassName: longhorn-storage
   resources:
     requests:
       storage: 10Gi
+status: {}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: navidrome-pvc-music
+  name: navidrome-pvc-music-longhorn
+  annotations:
+    numberOfReplicas: '1'
 spec:
-  volumeMode: Filesystem
-  volumeName: navidrome-pv-music
-  storageClassName: manual
-  accessModes:
-    - ReadWriteMany
+  accessModes: ["ReadWriteMany"]
+  storageClassName: longhorn-storage
   resources:
     requests:
       storage: 100Gi
+status: {}
