--- a/keycloak/pvc.yaml
+++ b/keycloak/pvc.yaml
@@ -1,22 +1,5 @@
 ---
 apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: data-keycloak-postgresql-0
-  namespace: keycloak
-  labels:
-    type: local
-spec:
-  persistentVolumeReclaimPolicy: Retain
-  storageClassName: manual
-  capacity:
-    storage: 10Gi
-  accessModes:
-    - ReadWriteMany
-  hostPath:
-    path: "/storage/keycloak/data"
----
-apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: data-keycloak-postgresql-0
@@ -24,12 +7,12 @@ metadata:
     app.kubernetes.io/component: primary
     app.kubernetes.io/instance: keycloak
     app.kubernetes.io/name: postgresql
+  annotations:
+    numberOfReplicas: '1'
 spec:
-  volumeMode: Filesystem
-  volumeName: data-keycloak-postgresql-0
-  storageClassName: manual
-  accessModes:
-    - ReadWriteMany
+  accessModes: ["ReadWriteMany"]
+  storageClassName: longhorn-storage
   resources:
     requests:
       storage: 10Gi
+status: {}
