--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,20 @@ DB_NAME=
 NEXTCLOUD_DB_USER=
 NEXCLOUD_DB_PWD=
 NEXCLOUD_ADMIN_DB_PWD=
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_ENDPOINTS=
+
+MINIO_ROOT_USER=
+MINIO_ROOT_PASSWORD=
+
+OPENWEBUI_OAUTH_CLIENT_ID=
+OPENWEBUI_OAUTH_CLIENT_SECRET=
+OPENWEBUI_OPENID_PROVIDER_URL=
+OPENWEBUI_OAUTH_PROVIDER_NAME=
+OPENWEBUI_OAUTH_SCOPES=
+
+SEAFILE_DB_PWD=
+SEAFILE_ADMIN_EMAIL=
+SEAFILE_ADMIN_PASSWORD=
