add registry (sadly deleting images is still buggy)

--- a/namespaces.yaml
+++ b/namespaces.yaml
@@ -63,3 +63,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: seafile
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: registry
+---
