--- a/registry/server/config.yaml
+++ b/registry/server/config.yaml
@@ -3,26 +3,25 @@ kind: ConfigMap
 metadata:
   name: registry-config
 data:
-  config.yml: |
+  config.yml: |-
     version: 0.1
     log:
       fields:
         service: registry
     storage:
+      delete:
+        enabled: true
       cache:
         blobdescriptor: inmemory
       filesystem:
         rootdirectory: /var/lib/registry
-      delete:
-        enabled: true
     http:
       addr: :5000
       headers:
         X-Content-Type-Options: [nosniff]
-        Access-Control-Allow-Credentials: ['true']
         Access-Control-Allow-Origin: ['https://registry.traunseenet.com']
-        health:
-      storagedriver:
-        enabled: true
-        interval: 10s
-        threshold: 3
+        Access-Control-Allow-Methods: ['HEAD', 'GET', 'OPTIONS', 'DELETE']
+        Access-Control-Allow-Headers: ['Authorization', 'Accept']
+        Access-Control-Max-Age: [1728000]
+        Access-Control-Allow-Credentials: ['true']
+        Access-Control-Expose-Headers: ['Docker-Content-Digest']
