--- a/registry/server/ingress.yaml
+++ b/registry/server/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    traefik.ingress.kubernetes.io/preserve-host: "true"
   name: registry-api
   namespace: registry
 spec:
