--- a/registry/ui/ingress.yaml
+++ b/registry/ui/ingress.yaml
@@ -3,8 +3,9 @@ kind: Ingress
 metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
-    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
+    traefik.ingress.kubernetes.io/preserve-host: "true"
   name: registry-ui
   namespace: registry
 spec:
