add ddns updater

--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,6 @@ DB_USER=
 DB_PASSWORD=
 DB_NAME=
 
-NEXTCLOUD_DB_USER=
-NEXCLOUD_DB_PWD=
-NEXCLOUD_ADMIN_DB_PWD=
-
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_ENDPOINTS=
@@ -31,3 +27,6 @@ SEAFILE_ADMIN_EMAIL=
 SEAFILE_ADMIN_PASSWORD=
 
 REGISTRY_AUTH_SECRET=
+
+DDNS_UPDATER_ZONE_IDENTIFIER=
+DDNS_UPDATER_TOKEN=
