add paperless and make some minor changes also tested redeploy, confirmed working

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,11 @@ REGISTRY_AUTH_SECRET=
 
 DDNS_UPDATER_ZONE_IDENTIFIER=
 DDNS_UPDATER_TOKEN=
+
+PAPERLESS_SECRET_KEY=
+PAPERLESS_CLIENT_ID=
+PAPERLESS_CLIENT_SECRET=
+PAPERLESS_OPENID_PROVIDER_URL=
+PAPERLESS_POSTGRES_DATABASE_NAME=
+PAPERLESS_POSTGRES_DATABASE_PWD=
+PAPERLESS_REDIS_UNAME=""
