--- a/namespaces.yaml
+++ b/namespaces.yaml
@@ -17,22 +17,17 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: radiology
----
-apiVersion: v1
-kind: Namespace
-metadata:
   name: immich
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: open-webui
+#apiVersion: v1
+#kind: Namespace
+#metadata:
+#  name: open-webui
 ---
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: observability
+#apiVersion: v1
+#kind: Namespace
+#metadata:
+#  name: observability
 ---
 apiVersion: v1
 kind: Namespace
@@ -63,4 +58,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: registry
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: paperless
 ---
