add local tailscale ingresses in case i need to use it

--- a/.env.example
+++ b/.env.example
@@ -26,8 +26,6 @@ SEAFILE_DB_PWD=
 SEAFILE_ADMIN_EMAIL=
 SEAFILE_ADMIN_PASSWORD=
 
-REGISTRY_AUTH_SECRET=
-
 DDNS_UPDATER_ZONE_IDENTIFIER=
 DDNS_UPDATER_TOKEN=
 
@@ -37,4 +35,7 @@ PAPERLESS_CLIENT_SECRET=
 PAPERLESS_OPENID_PROVIDER_URL=
 PAPERLESS_POSTGRES_DATABASE_NAME=
 PAPERLESS_POSTGRES_DATABASE_PWD=
-PAPERLESS_REDIS_UNAME=""
+PAPERLESS_REDIS_UNAME=
+
+TAILSCALE_CLIENT_ID=
+TAILSCALE_CLIENT_SECRET=
