--- a/registry/ui/deployment.yaml
+++ b/registry/ui/deployment.yaml
@@ -29,9 +29,5 @@ spec:
               value: "true"
             - name: SINGLE_REGISTRY
               value: "true"
-            #- name: REGISTRY_URL
-            #  value: "https://registry.traunseenet.com"
-            - name: NGINX_PROXY_PASS_URL
-              value: "https://registry-api.traunseenet.com"
-            - name: REGISTRY_SECURED
-              value: "true"
+            - name: REGISTRY_URL
+              value: "https://registry-api.taild128a7.ts.net"
