--- a/jellyfin/kustomization.yaml
+++ b/jellyfin/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 namespace: jellyfin
 resources:
 - deployment.yaml
-- ingress.yaml
+- ingress-public.yaml
 - pvc.yaml
 - service.yaml
