--- a/registry/server/config.yaml
+++ b/registry/server/config.yaml
@@ -19,9 +19,8 @@ data:
       addr: :5000
       headers:
         X-Content-Type-Options: [nosniff]
-        Access-Control-Allow-Origin: ['https://registry.traunseenet.com']
+        Access-Control-Allow-Origin: ['https://registry.taild128a7.ts.net']
         Access-Control-Allow-Methods: ['HEAD', 'GET', 'OPTIONS', 'DELETE']
         Access-Control-Allow-Headers: ['Authorization', 'Accept']
         Access-Control-Max-Age: [1728000]
-        Access-Control-Allow-Credentials: ['true']
         Access-Control-Expose-Headers: ['Docker-Content-Digest']
