--- a/.env.example
+++ b/.env.example
@@ -37,5 +37,4 @@ PAPERLESS_POSTGRES_DATABASE_NAME=
 PAPERLESS_POSTGRES_DATABASE_PWD=
 PAPERLESS_REDIS_UNAME=
 
-TAILSCALE_CLIENT_ID=
-TAILSCALE_CLIENT_SECRET=
+HEADSCALE_ACL=
