add local ingresses

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,7 @@ PAPERLESS_POSTGRES_DATABASE_PWD=
 PAPERLESS_REDIS_UNAME=
 
 HEADSCALE_ACL=
+
+WIREGUARD_PRIVATE_KEY=
+TS_AUTHKEY=
+SERVER_COUNTRIES=
