--- a/headscale/server/configmap-acl.yaml
+++ b/headscale/server/configmap-acl.yaml
@@ -19,7 +19,7 @@ data:
       "acls": [
         // Allow all connections.
         // Comment this section out if you want to define specific restrictions.
-        ${HEADSCALE_ACL},
+        {"action": "accept", "src": ["*"], "dst": ["*:*"]},
 
         // Allow users in "group:example" to access "tag:example", but only from
         // devices that are running macOS and have enabled Tailscale client auto-updating.
