--- a/registry/server/config.yaml
+++ b/registry/server/config.yaml
@@ -19,7 +19,7 @@ data:
       addr: :5000
       headers:
         X-Content-Type-Options: [nosniff]
-        Access-Control-Allow-Origin: ['https://registry.taild128a7.ts.net']
+        Access-Control-Allow-Origin: ['https://registry.local.traunseenet.com']
         Access-Control-Allow-Methods: ['HEAD', 'GET', 'OPTIONS', 'DELETE']
         Access-Control-Allow-Headers: ['Authorization', 'Accept']
         Access-Control-Max-Age: [1728000]
