--- a/audiobookshelf/kustomization.yaml
+++ b/audiobookshelf/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 namespace: audiobookshelf
 resources:
 - deployment.yaml
-- ingress-public.yaml
+- ingress-local.yaml
 - pvc.yaml
 - service.yaml
