--- a/headscale/server/configmap.yaml
+++ b/headscale/server/configmap.yaml
@@ -304,14 +304,22 @@ data:
       # Extra DNS records
       # so far only A-records are supported (on the tailscale side)
       # See https://github.com/juanfont/headscale/blob/main/docs/dns-records.md#Limitations
-      extra_records: []
+      extra_records:
       #   - name: "grafana.myvpn.example.com"
       #     type: "A"
       #     value: "100.64.0.3"
       #
       #   # you can also put it in one line
-      #   - { name: "prometheus.myvpn.example.com", type: "A", value: "100.64.0.3" }
-
+         - { name: "navidrome.local.traunseenet.com", type: "A", value: "100.64.0.1" }
+         - { name: "audiobooks.local.traunseenet.com", type: "A", value: "100.64.0.1" }
+         - { name: "jellyfin.local.traunseenet.com", type: "A", value: "100.64.0.1" }
+         - { name: "longhorn.local.traunseenet.com", type: "A", value: "100.64.0.1" }
+         - { name: "s3.local.traunseenet.com", type: "A", value: "100.64.0.1" }
+         - { name: "paperless.local.traunseenet.com", type: "A", value: "100.64.0.1" }
+         - { name: "registry-api.local.traunseenet.com", type: "A", value: "100.64.0.1" }
+         - { name: "registry.local.traunseenet.com", type: "A", value: "100.64.0.1" }
+         - { name: "seafile.local.traunseenet.com", type: "A", value: "100.64.0.1" }
+         - { name: "traefik-dashboard.local.traunseenet.com", type: "A", value: "100.64.0.1" }
       # DEPRECATED
       # Use the username as part of the DNS name for nodes, with this option enabled:
       # node1.username.example.com
