--- a/jellyfin/ingress-local.yaml
+++ b/jellyfin/ingress-local.yaml
@@ -2,23 +2,23 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: navidrome-classic
+  name: jellyfin
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
     - hosts:
-        - navidrome.local.traunseenet.com
-      secretName: letsencrypt-prod-classic
+        - jellyfin.local.traunseenet.com
+      secretName: letsencrypt-prod
   rules:
-    - host: navidrome.local.traunseenet.com
+    - host: jellyfin.local.traunseenet.com
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: navidrome
+                name: jellyfin
                 port:
-                  name: web
+                  name: http-tcp
