--- a/paperless/kustomization.yaml
+++ b/paperless/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: paperless
 resources:
-- ingress-public.yaml
+- ingress-local.yaml
 #- pvc.yaml #only used for initial setup, restore from longhorn if lost
 helmCharts:
   - name: paperless-ngx
