--- a/seafile/ingress-local.yaml
+++ b/seafile/ingress-local.yaml
@@ -2,24 +2,23 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: headscale-ui
+  name: seafile
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
 spec:
   tls:
     - hosts:
-        - headscale.traunseenet.com
-      secretName: letsencrypt-prod
+        - seafile.local.traunseenet.com
+      secretName: letsencrypt-prod-local
   rules:
-    - host: headscale.traunseenet.com
+    - host: seafile.local.traunseenet.com
       http:
         paths:
-          - path: /web
+          - path: /
             pathType: Prefix
             backend:
               service:
-                name: headscale-ui
+                name: seafile
                 port:
-                  number: 443
+                  number: 80
