--- a/dashboard/dashboard-ingress.yaml
+++ b/dashboard/dashboard-ingress.yaml
@@ -1,25 +1,25 @@
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
+  name: dashboard
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    #traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
-  name: registry-ui-ingress
-  namespace: registry
 spec:
   tls:
     - hosts:
-        - registry.local.traunseenet.com
+        - dashboard.traunseenet.com
       secretName: letsencrypt-prod
-  ingressClassName: traefik
   rules:
-    - host: registry.local.traunseenet.com
+    - host: dashboard.traunseenet.com
       http:
         paths:
-          - backend:
-              service:
-                name: docker-registry-ui
-                port:
-                  number: 80
-            path: /
+          - path: /
             pathType: Prefix
+            backend:
+              service:
+                name: dashboard-homepage
+                port:
+                  name: http
