--- a/namespaces.yaml
+++ b/namespaces.yaml
@@ -12,6 +12,11 @@ metadata:
 apiVersion: v1
 kind: Namespace
 metadata:
+  name: dashboard
+---
+apiVersion: v1
+kind: Namespace
+metadata:
   name: headscale
 ---
 apiVersion: v1
@@ -63,6 +68,11 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: paperless
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: portainer
 ---
 apiVersion: v1
 kind: Namespace
