--- a/minio/deployment.yaml
+++ b/minio/deployment.yaml
@@ -22,9 +22,15 @@ spec:
           - /data
         env:
         - name: MINIO_ROOT_USER
-          value: ${MINIO_ROOT_USER}
+          valueFrom:
+            secretKeyRef:
+              name: minio-secret
+              key: username
         - name: MINIO_ROOT_PASSWORD
-          value: ${MINIO_ROOT_PASSWORD}
+          valueFrom:
+            secretKeyRef:
+              name: minio-secret
+              key: password
         ports:
         - containerPort: 9000
         - containerPort: 9001
