--- a/seafile/mariadb/deployment.yaml
+++ b/seafile/mariadb/deployment.yaml
@@ -17,7 +17,10 @@ spec:
           image: mariadb:10.11
           env:
             - name: MARIADB_ROOT_PASSWORD
-              value: "${SEAFILE_DB_PWD}"
+              valueFrom:
+                secretKeyRef:
+                  name: seafile-secret
+                  key: dbpwd
             - name: MARIADB_AUTO_UPGRADE
               value: "true"
           ports:
