--- a/immich/values.yaml
+++ b/immich/values.yaml
@@ -14,7 +14,7 @@ env:
   IMMICH_MACHINE_LEARNING_URL: '{{ printf "http://%s-machine-learning:3003" .Release.Name }}'
 
 image:
-  tag: v1.115.0
+  tag: v1.116.0
 
 immich:
   metrics:
@@ -40,6 +40,8 @@ immich:
 # Dependencies
 
 postgresql:
+  readReplicas:
+    resourcesPreset: "large"
   enabled: true
   image:
     repository: tensorchord/pgvecto-rs
