--- a/keycloak/values.yaml
+++ b/keycloak/values.yaml
@@ -21,5 +21,7 @@ ingress:
     secretName: letsencrypt-prod-backup
 postgresql:
   enabled: true
+  image:
+    tag: 16.4.0-debian-12-r9
   auth:
     existingSecret: keycloak-auth
