--- a/minio/deployment.yaml
+++ b/minio/deployment.yaml
@@ -24,12 +24,12 @@ spec:
         - name: MINIO_ROOT_USER
           valueFrom:
             secretKeyRef:
-              name: minio-secret
+              name: minio-secrets
               key: username
         - name: MINIO_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: minio-secret
+              name: minio-secrets
               key: password
         ports:
         - containerPort: 9000
