--- a/openwebui/kustomization.yaml
+++ b/openwebui/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: open-webui
-resources:
-- ingress.yaml
+#resources:
+#- ingress.yaml
 #- pvc.yaml #only used for initial setup, restore from longhorn if lost
 helmCharts:
   - name: open-webui
@@ -10,3 +10,4 @@ helmCharts:
     releaseName: open-webui
     namespace: open-webui
     valuesFile: values.yaml
+    version: 3.3.2
