--- a/openwebui/values.yaml
+++ b/openwebui/values.yaml
@@ -15,8 +15,9 @@ ollama:
   #   models:
   #     - llama3
   # runtimeClassName: nvidia
-  # persistentVolume:
-  #   enabled: true
+  persistentVolume:
+    enabled: true
+    existingClaim: open-webui-llm-longhorn
 
 pipelines:
   # -- Automatically install Pipelines chart to extend Open WebUI functionality using Pipelines: https://github.com/open-webui/pipelines
@@ -51,7 +52,7 @@ ingress:
 persistence:
   enabled: true
   # -- Use existingClaim if you want to re-use an existing Open WebUI PVC instead of creating a new one
-  existingClaim: "open-webui-v2-longhorn"
+  existingClaim: "open-webui-v3-longhorn"
   # -- If using multiple replicas, you must update accessModes to ReadWriteMany
   accessModes:
     - ReadWriteMany
